syntax = "proto2";

package tutorial;

option java_package = "cn.xvkang.phone.netty.protobuf";
option java_outer_classname = "MyMessage";
message Data{
enum DataType{
OPEN =0;
CLOSE=1;
HeartRequest=2;
HeartResponse=3;
}
required DataType data_type = 1;
oneof dataBody{
Open openData=2;
Close closeData=3;
HeartRequest heartRequest=4;
HeartResponse heartResponse=5;
}

}
message Open {
  optional string name = 1;
  optional string email = 2;


}
  message Close {
    optional  string number = 1;
  }

  message HeartRequest {
    optional  string number = 1;
  }

  message HeartResponse {
    optional  string number = 1;
  }
